force-app/main/default/objects/hed__Program_Plan__c/hed__Program_Plan__c.object-meta.xml
<CustomObject>
    <description>Links Courses to an Academic Program to create a path for students to follow. An Academic Program can list multiple Courses, and a Course can be associated with multiple Academic Programs.</description>
    <label>Program Plan</label>
    <nameField>
        <label>Program Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>