force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Description__c.field-meta.xml
<CustomField>
    <fullName>hed__Description__c</fullName>
    <description>The description of Program Plan.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>