force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>hed__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is the Program Plan currently in effect for the selected Academic Program.</description>
    <inlineHelpText>Indique si ce plan de programme est en cours pour le programme académique sélectionné.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>