force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Start_Date__c</fullName>
    <description>The date this Program Plan went into effect.</description>
    <inlineHelpText>La date à laquelle ce plan du programme a pris effet.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>