force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Status__c</fullName>
    <description>Select &quot;Current&quot; if this Program Plan has students enrolled in it, or is eligible for students to enroll. Otherwise, select &quot;Archived.&quot;</description>
    <inlineHelpText>Sélectionnez « En cours » si des étudiants sont inscrits ou peuvent s&apos;inscrire à ce plan de programme, sinon sélectionnez « Archivé ».</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>