force-app/main/default/objects/hed__Program_Plan__c/fields/hed__Total_Required_Credits__c.field-meta.xml
<CustomField>
    <fullName>hed__Total_Required_Credits__c</fullName>
    <description>The total number of credits a student needs to complete to satisfy this Program Plan.</description>
    <inlineHelpText>Le nombre total de crédits qu&apos;un étudiant doit obtenir pour satisfaire à ce plan de programme.</inlineHelpText>
    <label>Total Required Credits</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>