force-app/main/default/objects/hed__Program_Plan__c/fields/SIS_Academic_Certification__c.field-meta.xml
<CustomField>
    <fullName>SIS_Academic_Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Certification</label>
    <referenceTo>hed__Academic_Certification__c</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>