force-app/main/default/objects/hed__Program_Plan__c/fields/SIS_External_ID_2__c.field-meta.xml
<CustomField>
    <fullName>SIS_External_ID_2__c</fullName>
    <label>External ID 2</label>
    <type>TextArea</type>
</CustomField>