force-app/main/default/objects/hed__Program_Plan__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>NAME</columns>
    <columns>hed__Account__c</columns>
    <columns>hed__Start_Date__c</columns>
    <columns>hed__End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>hed__Description__c</columns>
    <columns>hed__Is_Primary__c</columns>
    <columns>hed__Status__c</columns>
    <columns>hed__Version__c</columns>
    <columns>hed__Total_Required_Credits__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les structures pédagogiques</label>
</ListView>